--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,4 @@ DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 SECRET_KEY=
-
-DB_NAME=SAD
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=127.0.0.1
-DB_PORT=5433
-SECRET_KEY=SAD
+GEMINI_KEY=
